/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/notification/distributor/pb/gen";

import "ukama/notification.proto";
package ukama.notification.distributor.v1;

service DistributorService {
    rpc GetNotificationStream(NotificationStreamRequest) returns (stream Notification);
    //rpc GetNotifications(NotificationsRequest) returns (NotificationsResponse);
}

message NotificationsRequest {
    string orgId = 1 [json_name = "org_id"];
    string networkId = 2 [json_name = "network_id"];
    string subscriberId = 3 [json_name = "subscriber_id"];
    string userId = 4 [json_name = "user_id"];
}

message NotificationsResponse {
    repeated Notification notifications = 1;
}

message NotificationStreamRequest {
    string orgId = 1 [json_name = "org_id"];
    string networkId = 2 [json_name = "network_id"];
    string subscriberId = 3 [json_name = "subscriber_id"];
    string userId = 4 [json_name = "user_id"];
    repeated string scopes = 5 [json_name = "scopes"];
}

message Notification {
    string id = 1;
    string title = 2;
    string description = 3;
    bool isRead = 4 [json_name = "is_read"];
    ukama.common.v1.NotificationType type = 5;
    ukama.common.v1.NotificationScope scope = 6;
    string eventKey = 7 [json_name = "event_key"];
    string createdAt = 8 [json_name = "created_at"];
    string resourceId = 9 [json_name = "resource_id"];
    string orgId = 10 [json_name = "org_id"];
    string userId = 11 [json_name = "user_id"];
    string networkId = 12 [json_name = "network_id"];
    string subscriberId = 13 [json_name = "subscriber_id"];
}
